--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	
 	<body>
 		<h1>My name is Harsh Agrawal</h1>
-		<p>This is a paragraph</p>>
+		<p>This is a paragraph</p>
+		<p>This is second paragraph </p>
 	</body>
 
 </html>
