--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<h1>My name is Harsh Agrawal</h1>
 		<p>This is a paragraph</p>
 		<p>This is second paragraph </p>
+		<p>Changes are synchronize</p>
+		<p>hello</p>	
+		<p>My surname is Harsh Agrawal</p>
 	</body>
 
 </html>
